--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 
   gtag('config', 'G-5BE5TEDFDV');
 </script>
+  
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+/>
   -->
 </head>
 
@@ -243,12 +248,18 @@ document.getElementById('client-guide-form').addEventListener('submit', async fu
     <div class="container footer-grid">
       <img src="/assets/logo.svg" alt="Novive logo" />
       <p class="tagline">your brightest start..</p>
-      <p>Email: novivehqgmail.com</p>
- <p class="social-links">
-  <a href="https://instagram.com/novive.ng" target="_blank" rel="noopener">Instagram</a> •
-  <a href="https://x.com/noviv_ng" target="_blank" rel="noopener">X</a> •
-  <a href="https://chat.whatsapp.com/JzBOjDOj8EdERyFJZQhZdT?mode=gi_c" target="_blank" rel="noopener">WhatsApp Community</a>
-</p>
+      <p>Contact: novivehqgmail.com</p>
+  <div class="social-links">
+    <a href="https://instagram.com/YOURUSERNAME" target="_blank" rel="noopener">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://x.com/YOURUSERNAME" target="_blank" rel="noopener">
+      <i class="fab fa-x-twitter"></i>
+    </a>
+    <a href="https://chat.whatsapp.com/YOURGROUPLINK" target="_blank" rel="noopener">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+  </div>
       <p>
         <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
       </p>
